# GravitySim3D

./: .gitignore  CMakeLists.txt  README.md
config/: simulation.json
shaders/: background.fs.glsl  background.vs.glsl  basic.fs.glsl  basic.vs.glsl
src/: Camera.cpp  Camera.hpp  ConfigLoader.cpp  ConfigLoader.hpp  GLUtilities.cpp  GLUtilities.hpp  ImGuiWrapper.cpp  ImGuiWrapper.hpp  InteractiveGUI.cpp  InteractiveGUI.hpp  Mesh.cpp  Mesh.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  Shader.cpp  Shader.hpp  main.cpp  test.cpp
